--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+# AdaFruit.IO creds
 AIO_USER=FrodoBaggins
 AIO_PASS=TheOneRing
+
+# Raspberry Pi creds
+PI_IP=192.168.0.33
+PI_USER=Sam
+PI_PASS=Potato
+PI_PORT=22
